# bioNuSMV

./: .gitignore  CMakeLists.txt  README.md
NuSMV/: README_WINDOWS.txt  build.sh  compile.sh
NuSMV/code/nusmv/core/cinit/: cinitData.c
NuSMV/code/nusmv/core/compile/: PredicateExtractor.c  PredicateNormaliser.c  compileCone.c
NuSMV/code/nusmv/core/compile/dependency/: DependencyCore.c
NuSMV/code/nusmv/core/compile/flattening/: FlattenerCore.c
NuSMV/code/nusmv/core/compile/type_checking/checkers/: CheckerCore.c
NuSMV/code/nusmv/core/mc/: mc.h  mcEval.c  mcExplain.c  mcInt.h  mcMc.c
NuSMV/code/nusmv/core/node/: node.c  node.h
NuSMV/code/nusmv/core/node/printers/: PrinterSexpCore.c  PrinterWffCore.c
NuSMV/code/nusmv/core/opt/: opt.c  opt.h  optPkg.c
NuSMV/code/nusmv/core/parser/: grammar.y.1.50  grammar.y.2.50  grammar.y.3.50  input.l.2.50  symbols.h
NuSMV/code/nusmv/core/prop/: PropDb.c
NuSMV/code/nusmv/core/utils/: ErrorMgr.c  ErrorMgr.h
NuSMV/code/nusmv/core/wff/: ExprMgr.c
NuSMV/code/nusmv/core/wff/lr/: LogicRecognizerCore.c
NuSMV/code/nusmv/shell/mc/: mcCmd.c
NuSMV/doc/prog-man/: doxygen_nusmv.conf.in
cudd-2.4.1.1/util/: pipefork.c
tests/: latch.smv  pacbb_arctl.smv  pacbb_arctl01.smv  pacbb_arctl02.smv  pacbb_arctl03.smv  pacbb_arctl04.smv  pacbb_ctl.smv  pacbb_ctl01.smv  pacbb_ctl02.smv  runtests.sh
