cmake_minimum_required(VERSION 2.8.8)
project(nusmv260)

set(SOURCE_FILES
        NuSMV/code/nusmv/addons_core/compass/compile/compile.c
        NuSMV/code/nusmv/addons_core/compass/compile/ProbAssign.c
        NuSMV/code/nusmv/addons_core/compass/compile/ProbAssign.h
        NuSMV/code/nusmv/addons_core/compass/parser/ap/apInt.h
        NuSMV/code/nusmv/addons_core/compass/parser/ap/ParserAp.c
        NuSMV/code/nusmv/addons_core/compass/parser/ap/ParserAp.h
        NuSMV/code/nusmv/addons_core/compass/parser/ap/ParserAp_private.h
        NuSMV/code/nusmv/addons_core/compass/parser/prob/ParserProb.c
        NuSMV/code/nusmv/addons_core/compass/parser/prob/ParserProb.h
        NuSMV/code/nusmv/addons_core/compass/parser/prob/ParserProb_private.h
        NuSMV/code/nusmv/addons_core/compass/parser/prob/probInt.h
        NuSMV/code/nusmv/addons_core/compass/sigref/sigrefWrite.c
        NuSMV/code/nusmv/addons_core/compass/compass.c
        NuSMV/code/nusmv/addons_core/compass/compass.h
        NuSMV/code/nusmv/addons_core/compass/compassCmd.c
        NuSMV/code/nusmv/addons_core/compass/compassCmd.h
        NuSMV/code/nusmv/addons_core/compass/compassInt.h
        NuSMV/code/nusmv/addons_core/compass/compassPkg.c
        NuSMV/code/nusmv/addons_core/addonsCore.c
        NuSMV/code/nusmv/addons_core/addonsCore.h
        NuSMV/code/nusmv/core/be/be.h
        NuSMV/code/nusmv/core/be/beCnf.c
        NuSMV/code/nusmv/core/be/beInt.h
        NuSMV/code/nusmv/core/be/beManager.c
        NuSMV/code/nusmv/core/be/beManagerInt.h
        NuSMV/code/nusmv/core/be/bePkg.c
        NuSMV/code/nusmv/core/be/bePkg.h
        NuSMV/code/nusmv/core/be/beRbcManager.c
        NuSMV/code/nusmv/core/be/beRbcManager.h
        NuSMV/code/nusmv/core/bmc/sbmc/sbmcBmc.c
        NuSMV/code/nusmv/core/bmc/sbmc/sbmcBmc.h
        NuSMV/code/nusmv/core/bmc/sbmc/sbmcBmcInc.c
        NuSMV/code/nusmv/core/bmc/sbmc/sbmcBmcInc.h
        NuSMV/code/nusmv/core/bmc/sbmc/sbmcGen.c
        NuSMV/code/nusmv/core/bmc/sbmc/sbmcGen.h
        NuSMV/code/nusmv/core/bmc/sbmc/sbmcHash.c
        NuSMV/code/nusmv/core/bmc/sbmc/sbmcHash.h
        NuSMV/code/nusmv/core/bmc/sbmc/sbmcNodeStack.c
        NuSMV/code/nusmv/core/bmc/sbmc/sbmcNodeStack.h
        NuSMV/code/nusmv/core/bmc/sbmc/sbmcPkg.c
        NuSMV/code/nusmv/core/bmc/sbmc/sbmcPkg.h
        NuSMV/code/nusmv/core/bmc/sbmc/sbmcStructs.c
        NuSMV/code/nusmv/core/bmc/sbmc/sbmcStructs.h
        NuSMV/code/nusmv/core/bmc/sbmc/sbmcTableau.c
        NuSMV/code/nusmv/core/bmc/sbmc/sbmcTableau.h
        NuSMV/code/nusmv/core/bmc/sbmc/sbmcTableauInc.c
        NuSMV/code/nusmv/core/bmc/sbmc/sbmcTableauInc.h
        NuSMV/code/nusmv/core/bmc/sbmc/sbmcTableauIncLTLformula.c
        NuSMV/code/nusmv/core/bmc/sbmc/sbmcTableauIncLTLformula.h
        NuSMV/code/nusmv/core/bmc/sbmc/sbmcTableauLTLformula.c
        NuSMV/code/nusmv/core/bmc/sbmc/sbmcTableauLTLformula.h
        NuSMV/code/nusmv/core/bmc/sbmc/sbmcUtils.c
        NuSMV/code/nusmv/core/bmc/sbmc/sbmcUtils.h
        NuSMV/code/nusmv/core/bmc/bmc.h
        NuSMV/code/nusmv/core/bmc/bmcBmc.h
        NuSMV/code/nusmv/core/bmc/bmcBmcInc.c
        NuSMV/code/nusmv/core/bmc/bmcBmcNonInc.c
        NuSMV/code/nusmv/core/bmc/bmcCheck.c
        NuSMV/code/nusmv/core/bmc/bmcCheck.h
        NuSMV/code/nusmv/core/bmc/bmcConv.c
        NuSMV/code/nusmv/core/bmc/bmcConv.h
        NuSMV/code/nusmv/core/bmc/bmcDump.c
        NuSMV/code/nusmv/core/bmc/bmcDump.h
        NuSMV/code/nusmv/core/bmc/bmcGen.c
        NuSMV/code/nusmv/core/bmc/bmcGen.h
        NuSMV/code/nusmv/core/bmc/bmcInt.c
        NuSMV/code/nusmv/core/bmc/bmcInt.h
        NuSMV/code/nusmv/core/bmc/bmcModel.c
        NuSMV/code/nusmv/core/bmc/bmcModel.h
        NuSMV/code/nusmv/core/bmc/bmcOpt.c
        NuSMV/code/nusmv/core/bmc/bmcPkg.c
        NuSMV/code/nusmv/core/bmc/bmcPkg.h
        NuSMV/code/nusmv/core/bmc/bmcSimulate.c
        NuSMV/code/nusmv/core/bmc/bmcSimulate.h
        NuSMV/code/nusmv/core/bmc/bmcTableau.c
        NuSMV/code/nusmv/core/bmc/bmcTableau.h
        NuSMV/code/nusmv/core/bmc/bmcTableauLTLformula.c
        NuSMV/code/nusmv/core/bmc/bmcTableauPLTLformula.c
        NuSMV/code/nusmv/core/bmc/bmcTest.c
        NuSMV/code/nusmv/core/bmc/bmcTest.h
        NuSMV/code/nusmv/core/bmc/bmcTrace.c
        NuSMV/code/nusmv/core/bmc/bmcUtils.c
        NuSMV/code/nusmv/core/bmc/bmcUtils.h
        NuSMV/code/nusmv/core/cinit/cinit.h
        NuSMV/code/nusmv/core/cinit/cinitBatch.c
        NuSMV/code/nusmv/core/cinit/cinitData.c
        NuSMV/code/nusmv/core/cinit/cinitDummyMac.c
        NuSMV/code/nusmv/core/cinit/cinitInit.c
        NuSMV/code/nusmv/core/cinit/cinitInt.h
        NuSMV/code/nusmv/core/cinit/cinitVers.c
        NuSMV/code/nusmv/core/cinit/NuSMVEnv.c
        NuSMV/code/nusmv/core/cinit/NuSMVEnv.h
        NuSMV/code/nusmv/core/compile/dependency/dependency_int.h
        NuSMV/code/nusmv/core/compile/dependency/DependencyBase.c
        NuSMV/code/nusmv/core/compile/dependency/DependencyBase.h
        NuSMV/code/nusmv/core/compile/dependency/DependencyBase_private.h
        NuSMV/code/nusmv/core/compile/dependency/DependencyCore.c
        NuSMV/code/nusmv/core/compile/dependency/DependencyCore.h
        NuSMV/code/nusmv/core/compile/dependency/DependencyCore_private.h
        NuSMV/code/nusmv/core/compile/dependency/dependencyPkg.c
        NuSMV/code/nusmv/core/compile/dependency/dependencyPkg.h
        NuSMV/code/nusmv/core/compile/dependency/DependencyPsl.c
        NuSMV/code/nusmv/core/compile/dependency/DependencyPsl.h
        NuSMV/code/nusmv/core/compile/dependency/DependencyPsl_private.h
        NuSMV/code/nusmv/core/compile/dependency/FormulaDependency.c
        NuSMV/code/nusmv/core/compile/dependency/FormulaDependency.h
        NuSMV/code/nusmv/core/compile/dependency/FormulaDependency_private.h
        NuSMV/code/nusmv/core/compile/flattening/FlattenerBase.c
        NuSMV/code/nusmv/core/compile/flattening/FlattenerBase.h
        NuSMV/code/nusmv/core/compile/flattening/FlattenerBase_private.h
        NuSMV/code/nusmv/core/compile/flattening/FlattenerCore.c
        NuSMV/code/nusmv/core/compile/flattening/FlattenerCore.h
        NuSMV/code/nusmv/core/compile/flattening/FlattenerCore_private.h
        NuSMV/code/nusmv/core/compile/flattening/flattening_int.h
        NuSMV/code/nusmv/core/compile/flattening/flatteningPkg.c
        NuSMV/code/nusmv/core/compile/flattening/flatteningPkg.h
        NuSMV/code/nusmv/core/compile/flattening/MasterCompileFlattener.c
        NuSMV/code/nusmv/core/compile/flattening/MasterCompileFlattener.h
        NuSMV/code/nusmv/core/compile/flattening/MasterCompileFlattener_private.h
        NuSMV/code/nusmv/core/compile/symb_table/NFunction.c
        NuSMV/code/nusmv/core/compile/symb_table/NFunction.h
        NuSMV/code/nusmv/core/compile/symb_table/ResolveSymbol.c
        NuSMV/code/nusmv/core/compile/symb_table/ResolveSymbol.h
        NuSMV/code/nusmv/core/compile/symb_table/symb_table.c
        NuSMV/code/nusmv/core/compile/symb_table/symb_table.h
        NuSMV/code/nusmv/core/compile/symb_table/symb_table_int.h
        NuSMV/code/nusmv/core/compile/symb_table/SymbCache.c
        NuSMV/code/nusmv/core/compile/symb_table/SymbCache.h
        NuSMV/code/nusmv/core/compile/symb_table/SymbCache_private.h
        NuSMV/code/nusmv/core/compile/symb_table/SymbLayer.c
        NuSMV/code/nusmv/core/compile/symb_table/SymbLayer.h
        NuSMV/code/nusmv/core/compile/symb_table/SymbLayer_private.h
        NuSMV/code/nusmv/core/compile/symb_table/SymbTable.c
        NuSMV/code/nusmv/core/compile/symb_table/SymbTable.h
        NuSMV/code/nusmv/core/compile/symb_table/SymbType.c
        NuSMV/code/nusmv/core/compile/symb_table/SymbType.h
        NuSMV/code/nusmv/core/compile/symb_table/SymbType_private.h
        NuSMV/code/nusmv/core/compile/type_checking/checkers/CheckerBase.c
        NuSMV/code/nusmv/core/compile/type_checking/checkers/CheckerBase.h
        NuSMV/code/nusmv/core/compile/type_checking/checkers/CheckerBase_private.h
        NuSMV/code/nusmv/core/compile/type_checking/checkers/CheckerCore.c
        NuSMV/code/nusmv/core/compile/type_checking/checkers/CheckerCore.h
        NuSMV/code/nusmv/core/compile/type_checking/checkers/CheckerCore_private.h
        NuSMV/code/nusmv/core/compile/type_checking/checkers/CheckerPsl.c
        NuSMV/code/nusmv/core/compile/type_checking/checkers/CheckerPsl.h
        NuSMV/code/nusmv/core/compile/type_checking/checkers/CheckerPsl_private.h
        NuSMV/code/nusmv/core/compile/type_checking/checkers/checkersInt.c
        NuSMV/code/nusmv/core/compile/type_checking/checkers/checkersInt.h
        NuSMV/code/nusmv/core/compile/type_checking/checkers/CheckerStatement.c
        NuSMV/code/nusmv/core/compile/type_checking/checkers/CheckerStatement.h
        NuSMV/code/nusmv/core/compile/type_checking/checkers/CheckerStatement_private.h
        NuSMV/code/nusmv/core/compile/type_checking/type_checkingInt.h
        NuSMV/code/nusmv/core/compile/type_checking/TypeChecker.c
        NuSMV/code/nusmv/core/compile/type_checking/TypeChecker.h
        NuSMV/code/nusmv/core/compile/type_checking/TypeChecker_private.h
        NuSMV/code/nusmv/core/compile/compile.c
        NuSMV/code/nusmv/core/compile/compile.h
        NuSMV/code/nusmv/core/compile/compileBEval.c
        NuSMV/code/nusmv/core/compile/compileBEvalNew.c
        NuSMV/code/nusmv/core/compile/compileCheck.c
        NuSMV/code/nusmv/core/compile/compileCone.c
        NuSMV/code/nusmv/core/compile/compileExpr.c
        NuSMV/code/nusmv/core/compile/compileFlatten.c
        NuSMV/code/nusmv/core/compile/compileHrc.c
        NuSMV/code/nusmv/core/compile/compileInt.h
        NuSMV/code/nusmv/core/compile/compilePkg.c
        NuSMV/code/nusmv/core/compile/compileStruct.c
        NuSMV/code/nusmv/core/compile/compileUtil.c
        NuSMV/code/nusmv/core/compile/compileUtil.h
        NuSMV/code/nusmv/core/compile/compileWrite.c
        NuSMV/code/nusmv/core/compile/compileWriteUdg.c
        NuSMV/code/nusmv/core/compile/FlatHierarchy.c
        NuSMV/code/nusmv/core/compile/FlatHierarchy.h
        NuSMV/code/nusmv/core/compile/PredicateExtractor.c
        NuSMV/code/nusmv/core/compile/PredicateExtractor.h
        NuSMV/code/nusmv/core/compile/PredicateNormaliser.c
        NuSMV/code/nusmv/core/compile/PredicateNormaliser.h
        NuSMV/code/nusmv/core/dag/dag.h
        NuSMV/code/nusmv/core/dag/dagDfs.c
        NuSMV/code/nusmv/core/dag/dagEn.c
        NuSMV/code/nusmv/core/dag/dagEnStat.c
        NuSMV/code/nusmv/core/dag/dagInt.h
        NuSMV/code/nusmv/core/dag/dagManager.c
        NuSMV/code/nusmv/core/dag/dagStat.c
        NuSMV/code/nusmv/core/dag/dagVertex.c
        NuSMV/code/nusmv/core/dd/dd.c
        NuSMV/code/nusmv/core/dd/dd.h
        NuSMV/code/nusmv/core/dd/ddInt.h
        NuSMV/code/nusmv/core/dd/DDMgr.c
        NuSMV/code/nusmv/core/dd/DDMgr.h
        NuSMV/code/nusmv/core/dd/DDMgr_private.h
        NuSMV/code/nusmv/core/dd/VarsHandler.c
        NuSMV/code/nusmv/core/dd/VarsHandler.h
        NuSMV/code/nusmv/core/enc/base/BaseEnc.c
        NuSMV/code/nusmv/core/enc/base/BaseEnc.h
        NuSMV/code/nusmv/core/enc/base/BaseEnc_private.h
        NuSMV/code/nusmv/core/enc/base/BoolEncClient.c
        NuSMV/code/nusmv/core/enc/base/BoolEncClient.h
        NuSMV/code/nusmv/core/enc/base/BoolEncClient_private.h
        NuSMV/code/nusmv/core/enc/bdd/bdd.h
        NuSMV/code/nusmv/core/enc/bdd/BddEnc.c
        NuSMV/code/nusmv/core/enc/bdd/BddEnc.h
        NuSMV/code/nusmv/core/enc/bdd/BddEnc_private.h
        NuSMV/code/nusmv/core/enc/bdd/BddEncBddPrintWff.c
        NuSMV/code/nusmv/core/enc/bdd/BddEncCache.c
        NuSMV/code/nusmv/core/enc/bdd/BddEncCache.h
        NuSMV/code/nusmv/core/enc/bdd/bddInt.h
        NuSMV/code/nusmv/core/enc/be/BeEnc.c
        NuSMV/code/nusmv/core/enc/be/BeEnc.h
        NuSMV/code/nusmv/core/enc/be/BeEnc_private.h
        NuSMV/code/nusmv/core/enc/bool/BitValues.c
        NuSMV/code/nusmv/core/enc/bool/BitValues.h
        NuSMV/code/nusmv/core/enc/bool/BoolEnc.c
        NuSMV/code/nusmv/core/enc/bool/BoolEnc.h
        NuSMV/code/nusmv/core/enc/bool/BoolEnc_private.h
        NuSMV/code/nusmv/core/enc/utils/AddArray.c
        NuSMV/code/nusmv/core/enc/utils/AddArray.h
        NuSMV/code/nusmv/core/enc/utils/OrdGroups.c
        NuSMV/code/nusmv/core/enc/utils/OrdGroups.h
        NuSMV/code/nusmv/core/enc/utils/utils.c
        NuSMV/code/nusmv/core/enc/enc.c
        NuSMV/code/nusmv/core/enc/enc.h
        NuSMV/code/nusmv/core/enc/encInt.h
        NuSMV/code/nusmv/core/enc/operators.c
        NuSMV/code/nusmv/core/enc/operators.h
        NuSMV/code/nusmv/core/fsm/bdd/bdd.h
        NuSMV/code/nusmv/core/fsm/bdd/BddFsm.c
        NuSMV/code/nusmv/core/fsm/bdd/BddFsm.h
        NuSMV/code/nusmv/core/fsm/bdd/BddFsm_private.h
        NuSMV/code/nusmv/core/fsm/bdd/BddFsmCache.c
        NuSMV/code/nusmv/core/fsm/bdd/BddFsmPrint.c
        NuSMV/code/nusmv/core/fsm/bdd/bddInt.h
        NuSMV/code/nusmv/core/fsm/bdd/bddMisc.c
        NuSMV/code/nusmv/core/fsm/bdd/FairnessList.c
        NuSMV/code/nusmv/core/fsm/bdd/FairnessList.h
        NuSMV/code/nusmv/core/fsm/be/BeFsm.c
        NuSMV/code/nusmv/core/fsm/be/BeFsm.h
        NuSMV/code/nusmv/core/fsm/sexp/BoolSexpFsm.c
        NuSMV/code/nusmv/core/fsm/sexp/BoolSexpFsm.h
        NuSMV/code/nusmv/core/fsm/sexp/BoolSexpFsm_private.h
        NuSMV/code/nusmv/core/fsm/sexp/sexp.h
        NuSMV/code/nusmv/core/fsm/sexp/SexpFsm.c
        NuSMV/code/nusmv/core/fsm/sexp/SexpFsm.h
        NuSMV/code/nusmv/core/fsm/sexp/SexpFsm_private.h
        NuSMV/code/nusmv/core/fsm/sexp/sexpInt.h
        NuSMV/code/nusmv/core/fsm/fsm.c
        NuSMV/code/nusmv/core/fsm/fsm.h
        NuSMV/code/nusmv/core/fsm/FsmBuilder.c
        NuSMV/code/nusmv/core/fsm/FsmBuilder.h
        NuSMV/code/nusmv/core/fsm/fsmInt.h
        NuSMV/code/nusmv/core/hrc/dumpers/HrcDumper.c
        NuSMV/code/nusmv/core/hrc/dumpers/HrcDumper.h
        NuSMV/code/nusmv/core/hrc/dumpers/HrcDumper_private.h
        NuSMV/code/nusmv/core/hrc/dumpers/HrcDumperAnonymizer.c
        NuSMV/code/nusmv/core/hrc/dumpers/HrcDumperAnonymizer.h
        NuSMV/code/nusmv/core/hrc/dumpers/HrcDumperAnonymizer_private.h
        NuSMV/code/nusmv/core/hrc/dumpers/HrcDumperDebug.c
        NuSMV/code/nusmv/core/hrc/dumpers/HrcDumperDebug.h
        NuSMV/code/nusmv/core/hrc/dumpers/HrcDumperDebug_private.h
        NuSMV/code/nusmv/core/hrc/dumpers/HrcDumperSmv.c
        NuSMV/code/nusmv/core/hrc/dumpers/HrcDumperSmv.h
        NuSMV/code/nusmv/core/hrc/dumpers/HrcDumperSmv_private.h
        NuSMV/code/nusmv/core/hrc/dumpers/HrcDumperXml.c
        NuSMV/code/nusmv/core/hrc/dumpers/HrcDumperXml.h
        NuSMV/code/nusmv/core/hrc/dumpers/HrcDumperXml_private.h
        NuSMV/code/nusmv/core/hrc/hrc.c
        NuSMV/code/nusmv/core/hrc/hrc.h
        NuSMV/code/nusmv/core/hrc/hrcDump.c
        NuSMV/code/nusmv/core/hrc/HrcFlattener.c
        NuSMV/code/nusmv/core/hrc/HrcFlattener.h
        NuSMV/code/nusmv/core/hrc/hrcInt.h
        NuSMV/code/nusmv/core/hrc/HrcNode.c
        NuSMV/code/nusmv/core/hrc/HrcNode.h
        NuSMV/code/nusmv/core/hrc/HrcNode_private.h
        NuSMV/code/nusmv/core/hrc/hrcPrefixUtils.c
        NuSMV/code/nusmv/core/hrc/hrcPrefixUtils.h
        NuSMV/code/nusmv/core/hrc/hrcSymbTableUtils.c
        NuSMV/code/nusmv/core/hrc/hrcSymbTableUtils.h
        NuSMV/code/nusmv/core/hrc/HrcVarDependencies.c
        NuSMV/code/nusmv/core/hrc/HrcVarDependencies.h
        NuSMV/code/nusmv/core/hrc/hrcWrite.c
        NuSMV/code/nusmv/core/ltl/ltl2smv/ltl2smv.c
        NuSMV/code/nusmv/core/ltl/ltl2smv/ltl2smv.h
        NuSMV/code/nusmv/core/ltl/ltl.c
        NuSMV/code/nusmv/core/ltl/ltl.h
        NuSMV/code/nusmv/core/ltl/ltlCompassion.c
        NuSMV/code/nusmv/core/ltl/ltlInt.h
        NuSMV/code/nusmv/core/mc/mc.h
        NuSMV/code/nusmv/core/mc/mcAGonly.c
        NuSMV/code/nusmv/core/mc/mcEval.c
        NuSMV/code/nusmv/core/mc/mcExplain.c
        NuSMV/code/nusmv/core/mc/mcInt.h
        NuSMV/code/nusmv/core/mc/mcInvar.c
        NuSMV/code/nusmv/core/mc/mcLE.c
        NuSMV/code/nusmv/core/mc/mcMc.c
        NuSMV/code/nusmv/core/mc/mcTrace.c
        NuSMV/code/nusmv/core/node/anonymizers/NodeAnonymizerAtom.c
        NuSMV/code/nusmv/core/node/anonymizers/NodeAnonymizerAtom.h
        NuSMV/code/nusmv/core/node/anonymizers/NodeAnonymizerAtom_private.h
        NuSMV/code/nusmv/core/node/anonymizers/NodeAnonymizerBase.c
        NuSMV/code/nusmv/core/node/anonymizers/NodeAnonymizerBase.h
        NuSMV/code/nusmv/core/node/anonymizers/NodeAnonymizerBase_private.h
        NuSMV/code/nusmv/core/node/anonymizers/NodeAnonymizerDot.c
        NuSMV/code/nusmv/core/node/anonymizers/NodeAnonymizerDot.h
        NuSMV/code/nusmv/core/node/anonymizers/NodeAnonymizerDot_private.h
        NuSMV/code/nusmv/core/node/anonymizers/NodeAnonymizerST.c
        NuSMV/code/nusmv/core/node/anonymizers/NodeAnonymizerST.h
        NuSMV/code/nusmv/core/node/anonymizers/NodeAnonymizerST_private.h
        NuSMV/code/nusmv/core/node/anonymizers/PrinterNonAmbiguousDot.c
        NuSMV/code/nusmv/core/node/anonymizers/PrinterNonAmbiguousDot.h
        NuSMV/code/nusmv/core/node/anonymizers/PrinterNonAmbiguousDot_private.h
        NuSMV/code/nusmv/core/node/normalizers/MasterNormalizer.c
        NuSMV/code/nusmv/core/node/normalizers/MasterNormalizer.h
        NuSMV/code/nusmv/core/node/normalizers/MasterNormalizer_private.h
        NuSMV/code/nusmv/core/node/normalizers/NormalizerBase.c
        NuSMV/code/nusmv/core/node/normalizers/NormalizerBase.h
        NuSMV/code/nusmv/core/node/normalizers/NormalizerBase_private.h
        NuSMV/code/nusmv/core/node/normalizers/NormalizerCore.c
        NuSMV/code/nusmv/core/node/normalizers/NormalizerCore.h
        NuSMV/code/nusmv/core/node/normalizers/NormalizerCore_private.h
        NuSMV/code/nusmv/core/node/normalizers/NormalizerPsl.c
        NuSMV/code/nusmv/core/node/normalizers/NormalizerPsl.h
        NuSMV/code/nusmv/core/node/normalizers/NormalizerPsl_private.h
        NuSMV/code/nusmv/core/node/printers/MasterPrinter.c
        NuSMV/code/nusmv/core/node/printers/MasterPrinter.h
        NuSMV/code/nusmv/core/node/printers/MasterPrinter_private.h
        NuSMV/code/nusmv/core/node/printers/PrinterBase.c
        NuSMV/code/nusmv/core/node/printers/PrinterBase.h
        NuSMV/code/nusmv/core/node/printers/PrinterBase_private.h
        NuSMV/code/nusmv/core/node/printers/PrinterIWffCore.c
        NuSMV/code/nusmv/core/node/printers/PrinterIWffCore.h
        NuSMV/code/nusmv/core/node/printers/PrinterIWffCore_private.h
        NuSMV/code/nusmv/core/node/printers/PrinterPsl.c
        NuSMV/code/nusmv/core/node/printers/PrinterPsl.h
        NuSMV/code/nusmv/core/node/printers/PrinterPsl_private.h
        NuSMV/code/nusmv/core/node/printers/PrinterSexpCore.c
        NuSMV/code/nusmv/core/node/printers/PrinterSexpCore.h
        NuSMV/code/nusmv/core/node/printers/PrinterSexpCore_private.h
        NuSMV/code/nusmv/core/node/printers/printersInt.h
        NuSMV/code/nusmv/core/node/printers/PrinterWffCore.c
        NuSMV/code/nusmv/core/node/printers/PrinterWffCore.h
        NuSMV/code/nusmv/core/node/printers/PrinterWffCore_private.h
        NuSMV/code/nusmv/core/node/MasterNodeWalker.c
        NuSMV/code/nusmv/core/node/MasterNodeWalker.h
        NuSMV/code/nusmv/core/node/MasterNodeWalker_private.h
        NuSMV/code/nusmv/core/node/node.c
        NuSMV/code/nusmv/core/node/node.h
        NuSMV/code/nusmv/core/node/nodeInt.h
        NuSMV/code/nusmv/core/node/NodeMgr.c
        NuSMV/code/nusmv/core/node/NodeMgr.h
        NuSMV/code/nusmv/core/node/nodePkg.c
        NuSMV/code/nusmv/core/node/nodePrint.c
        NuSMV/code/nusmv/core/node/NodeWalker.c
        NuSMV/code/nusmv/core/node/NodeWalker.h
        NuSMV/code/nusmv/core/node/NodeWalker_private.h
        NuSMV/code/nusmv/core/node/nodeWffPrint.c
        NuSMV/code/nusmv/core/opt/opt.c
        NuSMV/code/nusmv/core/opt/opt.h
        NuSMV/code/nusmv/core/opt/optInt.h
        NuSMV/code/nusmv/core/opt/optPkg.c
        NuSMV/code/nusmv/core/opt/optPkg.h
        NuSMV/code/nusmv/core/opt/OptsHandler.c
        NuSMV/code/nusmv/core/opt/OptsHandler.h
        NuSMV/code/nusmv/core/parser/idlist/idlist_int.h
        NuSMV/code/nusmv/core/parser/idlist/ParserIdList.c
        NuSMV/code/nusmv/core/parser/idlist/ParserIdList.h
        NuSMV/code/nusmv/core/parser/idlist/ParserIdList_private.h
        NuSMV/code/nusmv/core/parser/ord/ordInt.h
        NuSMV/code/nusmv/core/parser/ord/ParserOrd.c
        NuSMV/code/nusmv/core/parser/ord/ParserOrd.h
        NuSMV/code/nusmv/core/parser/ord/ParserOrd_private.h
        NuSMV/code/nusmv/core/parser/psl/psl.c
        NuSMV/code/nusmv/core/parser/psl/psl_symbols.h
        NuSMV/code/nusmv/core/parser/psl/pslConv.c
        NuSMV/code/nusmv/core/parser/psl/pslExpr.c
        NuSMV/code/nusmv/core/parser/psl/pslExpr.h
        NuSMV/code/nusmv/core/parser/psl/pslInt.h
        NuSMV/code/nusmv/core/parser/psl/pslNode.c
        NuSMV/code/nusmv/core/parser/psl/pslNode.h
        NuSMV/code/nusmv/core/parser/parser.c
        NuSMV/code/nusmv/core/parser/parser.h
        NuSMV/code/nusmv/core/parser/parserInt.h
        NuSMV/code/nusmv/core/parser/parserPkg.c
        NuSMV/code/nusmv/core/parser/parserUtil.c
        NuSMV/code/nusmv/core/parser/symbols.h
        NuSMV/code/nusmv/core/prop/Prop.c
        NuSMV/code/nusmv/core/prop/Prop.h
        NuSMV/code/nusmv/core/prop/Prop_private.h
        NuSMV/code/nusmv/core/prop/Prop_Rewriter.c
        NuSMV/code/nusmv/core/prop/Prop_Rewriter.h
        NuSMV/code/nusmv/core/prop/Prop_Rewriter_private.h
        NuSMV/code/nusmv/core/prop/PropDb.c
        NuSMV/code/nusmv/core/prop/PropDb.h
        NuSMV/code/nusmv/core/prop/PropDb_private.h
        NuSMV/code/nusmv/core/prop/propInt.h
        NuSMV/code/nusmv/core/prop/propPkg.c
        NuSMV/code/nusmv/core/prop/propPkg.h
        NuSMV/code/nusmv/core/prop/propProp.c
        NuSMV/code/nusmv/core/prop/propProp.h
        NuSMV/code/nusmv/core/rbc/clg/clg.h
        NuSMV/code/nusmv/core/rbc/clg/clgClg.c
        NuSMV/code/nusmv/core/rbc/clg/clgInt.h
        NuSMV/code/nusmv/core/rbc/ConjSet.c
        NuSMV/code/nusmv/core/rbc/ConjSet.h
        NuSMV/code/nusmv/core/rbc/InlineResult.c
        NuSMV/code/nusmv/core/rbc/InlineResult.h
        NuSMV/code/nusmv/core/rbc/rbc.h
        NuSMV/code/nusmv/core/rbc/rbcCnf.c
        NuSMV/code/nusmv/core/rbc/rbcCnfCompact.c
        NuSMV/code/nusmv/core/rbc/rbcCnfSimple.c
        NuSMV/code/nusmv/core/rbc/rbcFormula.c
        NuSMV/code/nusmv/core/rbc/rbcInline.c
        NuSMV/code/nusmv/core/rbc/rbcInt.h
        NuSMV/code/nusmv/core/rbc/rbcManager.c
        NuSMV/code/nusmv/core/rbc/rbcOutput.c
        NuSMV/code/nusmv/core/rbc/rbcStat.c
        NuSMV/code/nusmv/core/rbc/rbcSubst.c
        NuSMV/code/nusmv/core/rbc/rbcUtils.c
        NuSMV/code/nusmv/core/sat/solvers/SatMinisat.c
        NuSMV/code/nusmv/core/sat/solvers/SatMinisat.h
        NuSMV/code/nusmv/core/sat/solvers/SatMinisat_private.h
        NuSMV/code/nusmv/core/sat/solvers/SatZchaff.c
        NuSMV/code/nusmv/core/sat/solvers/SatZchaff.h
        NuSMV/code/nusmv/core/sat/solvers/SatZchaff_private.h
        NuSMV/code/nusmv/core/sat/sat.h
        NuSMV/code/nusmv/core/sat/SatIncSolver.c
        NuSMV/code/nusmv/core/sat/SatIncSolver.h
        NuSMV/code/nusmv/core/sat/SatIncSolver_private.h
        NuSMV/code/nusmv/core/sat/satInt.h
        NuSMV/code/nusmv/core/sat/SatSolver.c
        NuSMV/code/nusmv/core/sat/SatSolver.h
        NuSMV/code/nusmv/core/sat/SatSolver_private.h
        NuSMV/code/nusmv/core/sat/satUtils.c
        NuSMV/code/nusmv/core/set/set.h
        NuSMV/code/nusmv/core/set/setInt.h
        NuSMV/code/nusmv/core/set/setSet.c
        NuSMV/code/nusmv/core/sexp/SexpInliner.c
        NuSMV/code/nusmv/core/sexp/SexpInliner.h
        NuSMV/code/nusmv/core/simulate/simulate.c
        NuSMV/code/nusmv/core/simulate/simulate.h
        NuSMV/code/nusmv/core/simulate/simulateInt.h
        NuSMV/code/nusmv/core/simulate/simulatePkg.c
        NuSMV/code/nusmv/core/simulate/SimulateState.c
        NuSMV/code/nusmv/core/simulate/SimulateState.h
        NuSMV/code/nusmv/core/simulate/SimulateState_private.h
        NuSMV/code/nusmv/core/simulate/simulateTransSet.c
        NuSMV/code/nusmv/core/simulate/simulateTransSet.h
        NuSMV/code/nusmv/core/trace/eval/BaseEvaluator.c
        NuSMV/code/nusmv/core/trace/eval/BaseEvaluator.h
        NuSMV/code/nusmv/core/trace/eval/BaseEvaluator_private.h
        NuSMV/code/nusmv/core/trace/exec/BaseTraceExecutor.c
        NuSMV/code/nusmv/core/trace/exec/BaseTraceExecutor.h
        NuSMV/code/nusmv/core/trace/exec/BaseTraceExecutor_private.h
        NuSMV/code/nusmv/core/trace/exec/BDDCompleteTraceExecutor.c
        NuSMV/code/nusmv/core/trace/exec/BDDCompleteTraceExecutor.h
        NuSMV/code/nusmv/core/trace/exec/BDDCompleteTraceExecutor_private.h
        NuSMV/code/nusmv/core/trace/exec/BDDPartialTraceExecutor.c
        NuSMV/code/nusmv/core/trace/exec/BDDPartialTraceExecutor.h
        NuSMV/code/nusmv/core/trace/exec/BDDPartialTraceExecutor_private.h
        NuSMV/code/nusmv/core/trace/exec/CompleteTraceExecutor.c
        NuSMV/code/nusmv/core/trace/exec/CompleteTraceExecutor.h
        NuSMV/code/nusmv/core/trace/exec/CompleteTraceExecutor_private.h
        NuSMV/code/nusmv/core/trace/exec/PartialTraceExecutor.c
        NuSMV/code/nusmv/core/trace/exec/PartialTraceExecutor.h
        NuSMV/code/nusmv/core/trace/exec/PartialTraceExecutor_private.h
        NuSMV/code/nusmv/core/trace/exec/SATCompleteTraceExecutor.c
        NuSMV/code/nusmv/core/trace/exec/SATCompleteTraceExecutor.h
        NuSMV/code/nusmv/core/trace/exec/SATCompleteTraceExecutor_private.h
        NuSMV/code/nusmv/core/trace/exec/SATPartialTraceExecutor.c
        NuSMV/code/nusmv/core/trace/exec/SATPartialTraceExecutor.h
        NuSMV/code/nusmv/core/trace/exec/SATPartialTraceExecutor_private.h
        NuSMV/code/nusmv/core/trace/exec/SATRestartPartialTraceExecutor_private.h
        NuSMV/code/nusmv/core/trace/exec/traceExec.c
        NuSMV/code/nusmv/core/trace/exec/traceExec.h
        NuSMV/code/nusmv/core/trace/loaders/TraceLoader.c
        NuSMV/code/nusmv/core/trace/loaders/TraceLoader.h
        NuSMV/code/nusmv/core/trace/loaders/TraceLoader_private.h
        NuSMV/code/nusmv/core/trace/loaders/TraceXmlLoader.c
        NuSMV/code/nusmv/core/trace/loaders/TraceXmlLoader.h
        NuSMV/code/nusmv/core/trace/loaders/TraceXmlLoader_private.h
        NuSMV/code/nusmv/core/trace/plugins/TraceCompact.c
        NuSMV/code/nusmv/core/trace/plugins/TraceCompact.h
        NuSMV/code/nusmv/core/trace/plugins/TraceCompact_private.h
        NuSMV/code/nusmv/core/trace/plugins/TraceEmpty.c
        NuSMV/code/nusmv/core/trace/plugins/TraceEmpty.h
        NuSMV/code/nusmv/core/trace/plugins/TraceEmpty_private.h
        NuSMV/code/nusmv/core/trace/plugins/TraceExplainer.c
        NuSMV/code/nusmv/core/trace/plugins/TraceExplainer.h
        NuSMV/code/nusmv/core/trace/plugins/TraceExplainer_private.h
        NuSMV/code/nusmv/core/trace/plugins/TracePlugin.c
        NuSMV/code/nusmv/core/trace/plugins/TracePlugin.h
        NuSMV/code/nusmv/core/trace/plugins/TracePlugin_private.h
        NuSMV/code/nusmv/core/trace/plugins/TraceTable.c
        NuSMV/code/nusmv/core/trace/plugins/TraceTable.h
        NuSMV/code/nusmv/core/trace/plugins/TraceTable_private.h
        NuSMV/code/nusmv/core/trace/plugins/TraceXmlDumper.c
        NuSMV/code/nusmv/core/trace/plugins/TraceXmlDumper.h
        NuSMV/code/nusmv/core/trace/plugins/TraceXmlDumper_private.h
        NuSMV/code/nusmv/core/trace/pkg_trace.c
        NuSMV/code/nusmv/core/trace/pkg_trace.h
        NuSMV/code/nusmv/core/trace/pkg_traceInt.h
        NuSMV/code/nusmv/core/trace/Trace.c
        NuSMV/code/nusmv/core/trace/Trace.h
        NuSMV/code/nusmv/core/trace/Trace_private.c
        NuSMV/code/nusmv/core/trace/Trace_private.h
        NuSMV/code/nusmv/core/trace/traceEval.c
        NuSMV/code/nusmv/core/trace/TraceLabel.c
        NuSMV/code/nusmv/core/trace/TraceLabel.h
        NuSMV/code/nusmv/core/trace/TraceMgr.c
        NuSMV/code/nusmv/core/trace/TraceMgr.h
        NuSMV/code/nusmv/core/trace/TraceOpt.c
        NuSMV/code/nusmv/core/trace/TraceOpt.h
        NuSMV/code/nusmv/core/trace/traceTest.c
        NuSMV/code/nusmv/core/trace/traceUtils.c
        NuSMV/code/nusmv/core/trace/TraceXml.c
        NuSMV/code/nusmv/core/trace/TraceXml.h
        NuSMV/code/nusmv/core/trans/bdd/bdd.h
        NuSMV/code/nusmv/core/trans/bdd/BddTrans.c
        NuSMV/code/nusmv/core/trans/bdd/BddTrans.h
        NuSMV/code/nusmv/core/trans/bdd/Cluster.c
        NuSMV/code/nusmv/core/trans/bdd/Cluster.h
        NuSMV/code/nusmv/core/trans/bdd/ClusterList.c
        NuSMV/code/nusmv/core/trans/bdd/ClusterList.h
        NuSMV/code/nusmv/core/trans/bdd/ClusterOptions.c
        NuSMV/code/nusmv/core/trans/bdd/ClusterOptions.h
        NuSMV/code/nusmv/core/trans/generic/GenericTrans.c
        NuSMV/code/nusmv/core/trans/generic/GenericTrans.h
        NuSMV/code/nusmv/core/trans/generic/GenericTrans_private.h
        NuSMV/code/nusmv/core/trans/trans.h
        NuSMV/code/nusmv/core/trans/transInt.h
        NuSMV/code/nusmv/core/utils/bignumbers/bignumbers.c
        NuSMV/code/nusmv/core/utils/bignumbers/bignumbers.h
        NuSMV/code/nusmv/core/utils/bignumbers/bvnumbersInt.h
        NuSMV/code/nusmv/core/utils/bignumbers/numbers.c
        NuSMV/code/nusmv/core/utils/bignumbers/numbersInt.h
        NuSMV/code/nusmv/core/utils/array.c
        NuSMV/code/nusmv/core/utils/array.h
        NuSMV/code/nusmv/core/utils/assoc.c
        NuSMV/code/nusmv/core/utils/assoc.h
        NuSMV/code/nusmv/core/utils/avl.c
        NuSMV/code/nusmv/core/utils/avl.h
        NuSMV/code/nusmv/core/utils/BigWordNumber.c
        NuSMV/code/nusmv/core/utils/BigWordNumber_private.h
        NuSMV/code/nusmv/core/utils/BigWordNumberInt.c
        NuSMV/code/nusmv/core/utils/BigWordNumberMgr.c
        NuSMV/code/nusmv/core/utils/BiMap.c
        NuSMV/code/nusmv/core/utils/BiMap.h
        NuSMV/code/nusmv/core/utils/bmc_profiler.h
        NuSMV/code/nusmv/core/utils/defs.h
        NuSMV/code/nusmv/core/utils/DLlist.c
        NuSMV/code/nusmv/core/utils/DLlist.h
        NuSMV/code/nusmv/core/utils/EnvObject.c
        NuSMV/code/nusmv/core/utils/EnvObject.h
        NuSMV/code/nusmv/core/utils/EnvObject_private.h
        NuSMV/code/nusmv/core/utils/error.c
        NuSMV/code/nusmv/core/utils/error.h
        NuSMV/code/nusmv/core/utils/ErrorMgr.c
        NuSMV/code/nusmv/core/utils/ErrorMgr.h
        NuSMV/code/nusmv/core/utils/heap.c
        NuSMV/code/nusmv/core/utils/heap.h
        NuSMV/code/nusmv/core/utils/list.c
        NuSMV/code/nusmv/core/utils/list.h
        NuSMV/code/nusmv/core/utils/Logger.c
        NuSMV/code/nusmv/core/utils/Logger.h
        NuSMV/code/nusmv/core/utils/LRUCache.c
        NuSMV/code/nusmv/core/utils/LRUCache.h
        NuSMV/code/nusmv/core/utils/lsort.h
        NuSMV/code/nusmv/core/utils/NodeGraph.c
        NuSMV/code/nusmv/core/utils/NodeGraph.h
        NuSMV/code/nusmv/core/utils/NodeList.c
        NuSMV/code/nusmv/core/utils/NodeList.h
        NuSMV/code/nusmv/core/utils/OAHash.c
        NuSMV/code/nusmv/core/utils/OAHash.h
        NuSMV/code/nusmv/core/utils/OAHash_private.h
        NuSMV/code/nusmv/core/utils/object.c
        NuSMV/code/nusmv/core/utils/object.h
        NuSMV/code/nusmv/core/utils/object_private.h
        NuSMV/code/nusmv/core/utils/Olist.c
        NuSMV/code/nusmv/core/utils/Olist.h
        NuSMV/code/nusmv/core/utils/OStream.c
        NuSMV/code/nusmv/core/utils/OStream.h
        NuSMV/code/nusmv/core/utils/Pair.c
        NuSMV/code/nusmv/core/utils/Pair.h
        NuSMV/code/nusmv/core/utils/portability.c
        NuSMV/code/nusmv/core/utils/portability.h
        NuSMV/code/nusmv/core/utils/range.c
        NuSMV/code/nusmv/core/utils/range.h
        NuSMV/code/nusmv/core/utils/Slist.c
        NuSMV/code/nusmv/core/utils/Slist.h
        NuSMV/code/nusmv/core/utils/Sset.c
        NuSMV/code/nusmv/core/utils/Sset.h
        NuSMV/code/nusmv/core/utils/Stack.c
        NuSMV/code/nusmv/core/utils/Stack.h
        NuSMV/code/nusmv/core/utils/StreamMgr.c
        NuSMV/code/nusmv/core/utils/StreamMgr.h
        NuSMV/code/nusmv/core/utils/TimerBench.c
        NuSMV/code/nusmv/core/utils/TimerBench.h
        NuSMV/code/nusmv/core/utils/Triple.c
        NuSMV/code/nusmv/core/utils/Triple.h
        NuSMV/code/nusmv/core/utils/Tuple5.c
        NuSMV/code/nusmv/core/utils/Tuple5.h
        NuSMV/code/nusmv/core/utils/ucmd.c
        NuSMV/code/nusmv/core/utils/ucmd.h
        NuSMV/code/nusmv/core/utils/ustring.c
        NuSMV/code/nusmv/core/utils/ustring.h
        NuSMV/code/nusmv/core/utils/UStringMgr.c
        NuSMV/code/nusmv/core/utils/UStringMgr.h
        NuSMV/code/nusmv/core/utils/utils.c
        NuSMV/code/nusmv/core/utils/utils.h
        NuSMV/code/nusmv/core/utils/utils_io.c
        NuSMV/code/nusmv/core/utils/utils_io.h
        NuSMV/code/nusmv/core/utils/utils_msvc.c
        NuSMV/code/nusmv/core/utils/utils_msvc.h
        NuSMV/code/nusmv/core/utils/Vector.c
        NuSMV/code/nusmv/core/utils/Vector.h
        NuSMV/code/nusmv/core/utils/watchdog_util.c
        NuSMV/code/nusmv/core/utils/watchdog_util.h
        NuSMV/code/nusmv/core/utils/WordNumber.c
        NuSMV/code/nusmv/core/utils/WordNumber.h
        NuSMV/code/nusmv/core/utils/WordNumber_private.h
        NuSMV/code/nusmv/core/utils/WordNumberMgr.c
        NuSMV/code/nusmv/core/utils/WordNumberMgr.h
        NuSMV/code/nusmv/core/wff/lr/LogicRecognizerBase.c
        NuSMV/code/nusmv/core/wff/lr/LogicRecognizerBase.h
        NuSMV/code/nusmv/core/wff/lr/LogicRecognizerBase_private.h
        NuSMV/code/nusmv/core/wff/lr/LogicRecognizerCore.c
        NuSMV/code/nusmv/core/wff/lr/LogicRecognizerCore.h
        NuSMV/code/nusmv/core/wff/lr/LogicRecognizerCore_private.h
        NuSMV/code/nusmv/core/wff/lr/MasterLogicRecognizer.c
        NuSMV/code/nusmv/core/wff/lr/MasterLogicRecognizer.h
        NuSMV/code/nusmv/core/wff/lr/MasterLogicRecognizer_private.h
        NuSMV/code/nusmv/core/wff/w2w/w2w.h
        NuSMV/code/nusmv/core/wff/w2w/w2wInt.h
        NuSMV/code/nusmv/core/wff/w2w/wff2nnf.c
        NuSMV/code/nusmv/core/wff/ExprMgr.c
        NuSMV/code/nusmv/core/wff/ExprMgr.h
        NuSMV/code/nusmv/core/wff/exprWff.c
        NuSMV/code/nusmv/core/wff/wff.h
        NuSMV/code/nusmv/core/wff/wffPkg.c
        NuSMV/code/nusmv/core/wff/wffRewrite.c
        NuSMV/code/nusmv/core/wff/wffRewrite.h
        NuSMV/code/nusmv/shell/bmc/sbmc/sbmcCmd.c
        NuSMV/code/nusmv/shell/bmc/sbmc/sbmcCmd.h
        NuSMV/code/nusmv/shell/bmc/bmcCmd.c
        NuSMV/code/nusmv/shell/bmc/bmcCmd.h
        NuSMV/code/nusmv/shell/cinit/cinit.c
        NuSMV/code/nusmv/shell/cinit/cinit.h
        NuSMV/code/nusmv/shell/cinit/cinitCmd.c
        NuSMV/code/nusmv/shell/cinit/cinitCmd.h
        NuSMV/code/nusmv/shell/cmd/cmd.c
        NuSMV/code/nusmv/shell/cmd/cmd.h
        NuSMV/code/nusmv/shell/cmd/cmdCmd.c
        NuSMV/code/nusmv/shell/cmd/cmdCmd.h
        NuSMV/code/nusmv/shell/cmd/cmdCmdInt.h
        NuSMV/code/nusmv/shell/cmd/cmdFile.c
        NuSMV/code/nusmv/shell/cmd/cmdInt.h
        NuSMV/code/nusmv/shell/cmd/cmdMisc.c
        NuSMV/code/nusmv/shell/compile/compileCmd.c
        NuSMV/code/nusmv/shell/compile/compileCmd.h
        NuSMV/code/nusmv/shell/dd/ddCmd.c
        NuSMV/code/nusmv/shell/dd/ddCmd.h
        NuSMV/code/nusmv/shell/enc/encCmd.c
        NuSMV/code/nusmv/shell/enc/encCmd.h
        NuSMV/code/nusmv/shell/fsm/bdd/bddCmd.c
        NuSMV/code/nusmv/shell/fsm/bdd/bddCmd.h
        NuSMV/code/nusmv/shell/hrc/hrcCmd.c
        NuSMV/code/nusmv/shell/hrc/hrcCmd.h
        NuSMV/code/nusmv/shell/ltl/ltlCmd.c
        NuSMV/code/nusmv/shell/ltl/ltlCmd.h
        NuSMV/code/nusmv/shell/mc/mcCmd.c
        NuSMV/code/nusmv/shell/mc/mcCmd.h
        NuSMV/code/nusmv/shell/opt/optCmd.c
        NuSMV/code/nusmv/shell/opt/optCmd.h
        NuSMV/code/nusmv/shell/parser/parserCmd.c
        NuSMV/code/nusmv/shell/parser/parserCmd.h
        NuSMV/code/nusmv/shell/prop/propCmd.c
        NuSMV/code/nusmv/shell/prop/propCmd.h
        NuSMV/code/nusmv/shell/simulate/simulateCmd.c
        NuSMV/code/nusmv/shell/simulate/simulateCmd.h
        NuSMV/code/nusmv/shell/trace/traceCmd.c
        NuSMV/code/nusmv/shell/trace/traceCmd.h
        NuSMV/code/nusmv/shell/utils/utilsCmd.c
        NuSMV/code/nusmv/shell/utils/utilsCmd.h
        NuSMV/code/nusmv/ltl2smvMain.c
        NuSMV/code/nusmv/main.c)

# Directories
include_directories(.)
include_directories(NuSMV)
include_directories(NuSMV/code)
include_directories(NuSMV/build/)
include_directories(NuSMV/build/build-cudd/include/)

# Flags
add_definitions(-DHAVE_CONFIG_H)

add_executable(nusmv260 ${SOURCE_FILES})
